# Haskell-MapReduce

./: LICENSE  MapReduce.cabal  README
src/: Hashable.hi  MR.hi  MRCode.hs  Main  Main.hi  Main.hs  MapReduce.cabal  MapReduce.hi  ParallelMap.hi  WordCount.hs  Words.hs  data
src/Control/: Monad2.hs
src/Control/Monad2/Trans/: MapReduce.hs
src/Parallel/MapReduce/: Multicore.hs  Simple.hs  WordCount.hs
src/Parallel/MapReduce/WordCount/: Documents.hs  Interface.hs  Tests.hs
src/Process/Common/: Hashable.hs  ParallelMap.hs
src/Process/MapReduce/: Multicore.hs  WordCount.hs
src/Process/MapReduce/WordCount/: Documents.hs  Tests.hs
