name:                MapReduce
version:             0.2
copyright:           (c) 2011, Julian Porter
license:             BSD3
license-file:        LICENSE
author:              Julian Porter
maintainer:          Julian Porter
cabal-version:       >= 1.6
stability:           provisional
synopsis:            A framework for MapReduce on multicore systems
description:         null
category:            Concurrency
build-type:          Simple
tested-with:         GHC==6.10, GHC==7.0.3, GHC==7.2.1
extra-source-files:  README

source-repository head
  type:      git
  location:  git://github.com/Julianporter/Haskell-MapReduce.git

library
  build-depends:    base >=4  && <5,
                    parallel, deepseq,
                    bytestring,
                    binary,
                    pureMD5
  ghc-options:      
  hs-source-dirs:   src
  exposed-modules:  Process.MapReduce.Multicore,
                    Process.MapReduce.WordCount,
                    Process.MapReduce.WordCount.Tests,
                    Process.MapReduce.WordCount.Documents
                    Control.Monad2,
                    Control.Monad2.Trans.MapReduce
  exposed:          True
  extensions:       MultiParamTypeClasses,
                    FlexibleInstances

executable wordcount
  main-is:         WordCount.hs
  build-depends:   base >=4 && <5
  ghc-options:     -threaded
  hs-source-dirs:  src
  other-modules:   Process.MapReduce.WordCount,
                   Process.MapReduce.Multicore

executable testwordcount
  main-is:         Main.hs
  build-depends:   base >=4 && <5, QuickCheck
  ghc-options:     -threaded
  hs-source-dirs:  src
  other-modules:   Process.MapReduce.WordCount,
                   Process.MapReduce.WordCount.Tests,
                   Process.MapReduce.WordCount.Documents,
                   Process.MapReduce.Multicore

