name:           MapReduce
version:        0.1
cabal-version:  >= 1.8
Build-Type:     Simple



executable MapReduce
  Build-Depends:
                   base >= 3 && < 5,
                   cryptohash >= 0.7,
                   haskell98 >= 1.0.1.1,
                   deepseq >= 1.1.0.0,
                   parallel >= 2.2.0.0,
                   bytestring >=0.9.1.9
  hs-source-dirs:  src
  main-is:         Main.hs
  other-modules:   MapReduce, Hashable, ParallelMap
  GHC-options:     -O2 -threaded

